--- a/wwwroot/css/register.css
+++ b/wwwroot/css/register.css
@@ -157,7 +157,9 @@ body {
     margin-top: 30px;
     padding-top: 20px;
     border-top: 1px solid #e1e5e9;
+    color: #666;
 }
+
 
 .login-link {
     color: #2a5298;
